# biwt

./: .gitignore  CLAUDE.md  PRD.md  README.md  progress.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/biwt/: __init__.py  types.py
src/biwt/core/: __init__.py  cell_types.py  data_loader.py  domain.py  positioning.py
src/biwt/core/parameters/: __init__.py  cell_templates.py  cell_templates.toml  xml_defaults.py
src/biwt/gui/: __init__.py  theme.py  walkthrough.py  widgets.py
src/biwt/gui/windows/: __init__.py  base.py  cell_counts.py  cluster_column.py  edit_cell_types.py  generate_cell_parameters.py  load_cell_parameters.py  positions.py  rename_cell_types.py  spatial_query.py  spot_deconvolution.py  write_positions.py
tests/: test_positions_plot.py  test_session.py
tests/fixtures/: make_fixtures.R  nonspatial.csv  spatial.csv  spatial_pixels.csv  spot_deconv.csv  test_AnnData.h5ad
